# ai-agents

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.streamlit/: config.toml
notebooks/: 01-llm-apis.ipynb  02-explore-amazon-dataset.ipynb  test.ipynb
qdrant_storage/: raft_state.json
src/chatbot-ui/: retrieval.py  streamlit_app.py  test_env.py
src/chatbot-ui/core/: config.py
